tests/ui/type/type-ascription-instead-of-statement-end.stderr
error: statements are terminated with a semicolon
  --> $DIR/type-ascription-instead-of-statement-end.rs:3:21
   |
LL |     println!("test"):
   |                     ^ help: use a semicolon instead: `;`
   |
   = note: type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-instead-of-statement-end.rs:8:21
   |
LL |     println!("test"): 0;
   |                     ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: aborting due to 2 previous errors

